# PolStance

./: .gitattributes  .gitignore  README.md  app.py  envstore  getArticle.py  getLabel.py  getTitle.py  getTitleLabel.py  inference.py  labelingEnv.txt  main.py  pyproject.toml  run_pipeline.sh  stance_pipeline.drawio  test.py  trainModel.py
.github/workflows/: auto-labeling.yml
Labeling/: autoLabelingWorker.py  deepseekLabeling.py  geminiLabeling.py  gptLabeling.py  llamaLabeling.py  mainClass.py  utils.py
Labeling/utils/: DBManager.py  HFManager.py
atlasDocker/: Dockerfile  README.md  app.py  requirements.txt
facebook_posts/: facebook_posts_crawl.py
siteCrawler/: ctinews.py  ltnnews.py  setn.py  thenewslens.py
src/: app.py  cluster_analysis.py  dataset.py  embedding_classification.py  evaluate_existing_labels.py  inference.py  model.py  run_inference.py  test.py  text_embedding.py  trainModel.py  trainer.py  visualize.py
src/Labeling/: autoLabelingWorker.py  claudeLabeling.py  geminiLabeling.py  gptLabeling.py  llamaLabeling.py  mainClass.py
src/Labeling/utils/: DBManager.py  HFManager.py
src/legacy/: getTitleLabel.py
src/siteCrawler/: chinatimes.py  clean.py  drop.md
src/utils/: DBManager.py  HFManager.py
tmp/: all_models.json  deepseek_debug.json  gemini_debug.txt  gpt_debug.json
