[project]
name = "polstance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataset>=1.6.2",
    "datasets>=4.4.1",
    "google-genai>=1.39.1",
    "ipykernel>=7.1.0",
    "load-dotenv>=0.1.0",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
]
