[project]
name = "polstance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "dataset>=1.6.2",
    "datasets>=4.4.1",
    "google-genai>=1.53.0",
    "gradio>=5.47.2",
    "ipykernel>=7.1.0",
    "load-dotenv>=0.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pytorch-metric-learning>=2.9.0",
    "scikit-learn>=1.7.2",
    "selenium>=4.35.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers[sentencepiece]>=4.56.2",
    "xgboost>=3.1.2",
]

[dependency-groups]
dev = [
    "embedding-atlas>=0.13.0",
    "uv>=0.9.16",
]
